--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "date-fns": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "eslint": "^8",
