--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@supabase/supabase-js": "^2.43.2",
+    "country-json": "^2.2.0",
     "date-fns": "^3.6.0",
+    "json-server": "^1.0.0-beta.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
