--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@supabase/supabase-js": "^2.43.2",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "country-json": "^2.2.0",
     "date-fns": "^3.6.0",
     "json-server": "^1.0.0-beta.0",
